able to lookup blueprint info from the static sde, working on more abstracted helper functions

--- a/src/templates/blueprints.html
+++ b/src/templates/blueprints.html
@@ -9,9 +9,9 @@
             <div class="column is-one-quarter">
                 <div class="card">
                     <div class="card-content">
-                        <p class="title">{{ blueprint.item_id }}</p>
+                        <p class="title">{{ blueprint.type_name }}</p>
                         <p class="subtitle">
-                            <strong>Blueprint ID:</strong> {{ blueprint.item_id }}<br>
+                            <strong>Blueprint ID:</strong> {{ blueprint.type_id }}<br>
                             <strong>Blueprint Location:</strong> {{ blueprint.location_id }}<br>
                             <strong>Blueprint Runs:</strong> {{ blueprint.runs }}<br>
                         </p>
